update headers for each lesson

--- a/lesson03/translations.tex
+++ b/lesson03/translations.tex
@@ -9,7 +9,7 @@
 \pagestyle{fancy}
 \fancyhead{}
 \fancyfoot{}
-\fancyhead[L]{\slshape \MakeUppercase{Collar and Daniell's First Year Latin}}
+\fancyhead[L]{\slshape \MakeUppercase{First Conjugation}}
 \fancyhead[R]{\slshape \MakeUppercase{Lesson III}}
 \fancyfoot[C]{\thepage}
 \renewcommand{\footrulewidth}{0pt}
