--- a/lesson07/translations.tex
+++ b/lesson07/translations.tex
@@ -9,7 +9,7 @@
 \pagestyle{fancy}
 \fancyhead{}
 \fancyfoot{}
-\fancyhead[L]{\slshape \MakeUppercase{Collar and Daniell's First Year Latin}}
+\fancyhead[L]{\slshape \MakeUppercase{Second Declension}}
 \fancyhead[R]{\slshape \MakeUppercase{Lesson VII}}
 \fancyfoot[C]{\thepage}
 \renewcommand{\footrulewidth}{0pt}
