--- a/lesson08/translations.tex
+++ b/lesson08/translations.tex
@@ -9,7 +9,7 @@
 \pagestyle{fancy}
 \fancyhead{}
 \fancyfoot{}
-\fancyhead[L]{\slshape \MakeUppercase{Collar and Daniell's First Year Latin}}
+\fancyhead[L]{\slshape \MakeUppercase{First and Second Declensions}}
 \fancyhead[R]{\slshape \MakeUppercase{Lesson VIII}}
 \fancyfoot[C]{\thepage}
 \renewcommand{\footrulewidth}{0pt}
