remove extra word

--- a/lesson12/translations.tex
+++ b/lesson12/translations.tex
@@ -187,7 +187,7 @@
 	\item Was the trumpet pleasing to the boy? The trumpet was dear and pleasing to the boy.
 	\item Who has the tender roses? The boys have the tender roses.
 	\item Why do you show the pretty books to the master? Because he loves the books.
-	\item O (my) messenger, do you see the new moon? I see the new moon in the black sky.
+	\item O (my) messenger, do you see the new moon? I see the moon in the black sky.
 \end{enumerate}
 
 \end{document}
