add missing comma

--- a/lesson13/translations.tex
+++ b/lesson13/translations.tex
@@ -43,7 +43,7 @@
 		\item Librīs docēbāmus.
 		\item Gladiō tuō amīcōs līberābās.
 		\item Arātrō novō agrum arābam.
-		\item Somnus erat grātus deō dēfessō Mercuriō.
+		\item Somnus erat grātus deō dēfessō, Mercuriō.
 		\item Virī hastīs et pīlīs longīs pūgnābant.
 	\end{enumerate}
 \end{enumerate}
