remove duplicate adjective

--- a/lesson14/translations.tex
+++ b/lesson14/translations.tex
@@ -29,7 +29,7 @@
 		\item The farmer and boys will hasten into the fields.
 		\item They will work on the fields with great zeal.
 		\item They will gladly carry the grain into the town.
-		\item They will drive the horses with great great care.
+		\item They will drive the horses with great care.
 		\item They will not remain in the town.
 	\end{enumerate}
 	\item \begin{enumerate}[1)]
