fix indentation and minor errors

--- a/lesson15/translations.tex
+++ b/lesson15/translations.tex
@@ -5,6 +5,7 @@
 \usepackage{fancyhdr}
 \usepackage[sc]{titlesec}
 \usepackage{enumerate}
+\usepackage{indentfirst}
 
 \pagestyle{fancy}
 \fancyhead{}
@@ -24,7 +25,7 @@
 		\item They have fought, they have drove, they have worked.
 		\item We have hastened, we have built, we have loved.
 		\item Have I loved? you have called, you have hastened.
-		\item He has carried, he has delighted, he has routed.
+		\item He brought, he has delighted, he has routed.
 	\end{enumerate}
 	\item \begin{enumerate}[1)]
 		\item Laudāvistī, arāvistī, nārrāvistī.
@@ -36,6 +37,6 @@
 
 \section{\textsc{The Romans and the Sabines}}
 
-\hspace{\parindent} Romulus, the Roman, has built the beautiful town of Italy. He called the inhabitants of the town the Romans. The Romans were strong men and they greatly loved their native country. Often with their neighbors, the Sabines, they fought in defence of their native country and often surpassed in war with arms. The victory was once doubtful for a long time. For Sabines had great arms and they fought with long javelins with great boldness. But the Romans routed the Sabines and wounded many with arrows. That victory was dear to the Romans.
+Romulus has built Rome, the beautiful town of Italy. He called the inhabitants of the town the Romans. The Romans were strong men and they greatly loved their native country. Often with their neighbors, the Sabines, they fought in defence of their native country and often surpassed in war with arms. The victory was once doubtful for a long time. For Sabines had good arms and with long javelins they fought with great boldness. But the Romans routed the Sabines and wounded many with arrows. That victory was dear to the Romans.
 
 \end{document}
