--- a/lesson17/translations.tex
+++ b/lesson17/translations.tex
@@ -22,21 +22,21 @@
 	\setlength{\itemsep}{1em}
 	\item \begin{enumerate}[1)]
 		\item That shield, that sword, this story.
-		\item By the sword, for the sword, with war.
-		\item With food, this money, on this land.
+		\item By this sword, for this sword, by this war.
+		\item With this food, with this money, on this land.
 		\item In this sleep, of these gardens, of this gold.
 		\item These arms were mine, but this money was yours.
-		\item These fierce men were our neighbors.
+		\item Those fierce men have been our neighbors.
 		\item Have you seen them? Not them, but we have seen their sons.
-		\item The master of this horse was lazy.
+		\item The master of this horse was a slow man.
 		\item His horse was tired.
-		\item But the small boy gave water to him and filled cups with wine for the master and mistress.
+		\item But the small boy gave water to him and filled the cups with wine for the master and mistress.
 	\end{enumerate}
 	\item \begin{enumerate}[1)]
 		\item Eī deae, Vestae.
 		\item Eīs deābus, iīs armīs.
-		\item In eō equō nigrō, eō, eīs.
-		\item Ēius oppidānus, fortūnam eōrum, iīs virī.
+		\item In eō equō nigrō, eī, iīs.
+		\item Ēius oppidānī praedictī, eārum fortūnārum, iī virī.
 		\item Amīcōs bonōs habuī.
 		\item Ēorum fīliōs, sed nōn ēorum fīliās docuī.
 		\item Eōs vīdistī et laudāvistī.
