--- a/tex-translations/18-lesson.tex
+++ b/tex-translations/18-lesson.tex
@@ -20,16 +20,37 @@
 \begin{enumerate}[I.]
 	\setlength{\itemsep}{1em}
 	\item \begin{enumerate}[1)]
-		\item
+		\item Who built that temple?
+		\item Which men have built that temple?
+		\item What is in this temple?
+		\item What woman does not love children?
+		\item To whom does Marcus give that cup?
+		\item For which men is the country not dear?
+		\item Which fields does that farmer plough?
+		\item Whom do you praise?
+		\item What does the servant have in the cup?
+		\item Which girl does the master praise?
+		\item By which plough has the farmer ploughed these fields?
+		\item Whose arms has that boy?
 	\end{enumerate}
 	\item \begin{enumerate}[1)]
-		\item
+		\item Quis fuit nūntius deōrum?
+		\item Cūius nūntius fuit Mercurius?
+		\item Cūius scūtum habuit is puer?
+		\item Cui scūtum dōnāvit?
+		\item Quem superāvistis?
+		\item Quibus armīs eōs virōs superāvistis?
 	\end{enumerate}
 \end{enumerate}
 
 \section{\textsc{Review}}
 \begin{enumerate}[1.]
-	\item
+	\item The two personal endings are \textbf{-ērunt} and \textbf{-ere}.
+	\item The difference is that \textbf{vocāvit} is in the perfect tense and denotes a completed act, while \textbf{amābant} is in the imperfect tense and denotes an act going on, continued, or repeated.
+	\item The \textit{present indicative}, \textit{present infinitive}, \textit{perfect indicative}, and \textit{perfect participle} forms of the verb make up the principle parts.
+	\item The perfect stem of \textbf{sum} is \textbf{fu-}.
+	\item Five examples of \textbf{is} used as a pronoun: 141, I. 7, Eōsne, eōs, eōrum; 141, I. 8, ēius; 141, I. 9, ēius. Four examples of \textbf{is} used as an adjective: 141, I. 5, ea, ea; 141, I. 6, Iī; 141, I. 10, eī.
+	\item The form \textbf{quod} is used interrogatively in the neuter as an adjective. The form \textbf{quī} is used in the masculine.
 \end{enumerate}
 
 \end{document}
