--- a/tex-translations/18-lesson.tex
+++ b/tex-translations/18-lesson.tex
@@ -23,7 +23,7 @@
 		\item Who built that temple?
 		\item Which men have built that temple?
 		\item What is in this temple?
-		\item What woman does not love children?
+		\item What woman does not love her children?
 		\item To whom does Marcus give that cup?
 		\item For which men is the country not dear?
 		\item Which fields does that farmer plough?
@@ -46,10 +46,10 @@
 \section{\textsc{Review}}
 \begin{enumerate}[1.]
 	\item The two personal endings are \textbf{-ērunt} and \textbf{-ere}.
-	\item The difference is that \textbf{vocāvit} is in the perfect tense and denotes a completed act, while \textbf{amābant} is in the imperfect tense and denotes an act going on, continued, or repeated.
+	\item The difference is that \textbf{vocāvit} is in the perfect tense and denotes a completed act (the act of calling is no longer happening), while \textbf{amābant} is in the imperfect tense and denotes an act going on, continued, or repeated (the act of loving is still happening).
 	\item The \textit{present indicative}, \textit{present infinitive}, \textit{perfect indicative}, and \textit{perfect participle} forms of the verb make up the principle parts.
 	\item The perfect stem of \textbf{sum} is \textbf{fu-}.
-	\item Five examples of \textbf{is} used as a pronoun: 141, I. 7, Eōsne, eōs, eōrum; 141, I. 8, ēius; 141, I. 9, ēius. Four examples of \textbf{is} used as an adjective: 141, I. 5, ea, ea; 141, I. 6, Iī; 141, I. 10, eī.
+	\item Five examples of \textbf{is} used as a pronoun: 141, I. 7, Eōsne, eōs, eōrum; 141, I. 8, ēius; 141, I. 9, ēius. Four examples of \textbf{is} used as an adjective: 141, I. 5, Ea arma, ea pecūnia; 141, I. 6, Iī virī; 141, I. 10, eī dominō.
 	\item The form \textbf{quod} is used interrogatively in the neuter as an adjective. The form \textbf{quī} is used in the masculine.
 \end{enumerate}
 
