--- a/tex-translations/19-lesson.tex
+++ b/tex-translations/19-lesson.tex
@@ -20,9 +20,9 @@
 \begin{enumerate}[I.]
 	\setlength{\itemsep}{1em}
 	\item \begin{enumerate}[1)]
-		\item He rules, he was willing, he will rule.
+		\item He rules, he was ruling, he will rule.
 		\item I buy, I was buying, I shall buy.
-		\item They lead, they will lead, they were leading.
+		\item They lead, they will lead, he was leading.
 		\item He has ruled, they have ruled, he has led.
 		\item They have led, you have bought, you have bought.
 		\item I have sent, we have sent, he has sent.
@@ -30,25 +30,25 @@
 		\item The farmer has full fields of grain.
 		\item He will send that grain into the large town.
 		\item He sends this in full wagons with strong horses.
-		\item Who drove those horses on the long road?
-		\item He has led them, his sons, Marcus and Brutus, and today they will lead.
-		\item The inhabitants of this town have bought the farmers' grain, not the wagons.
+		\item Who will drive these horses on the long road?
+		\item His sons, Marcus and Brutus, have led them and today they will lead.
+		\item The inhabitants of this town have bought the farmer's grain, not the wagons.
 		\item The boys have brought back gold and gifts for their friends.
-		\item These beautiful gifts were pleasing to their friends.
+		\item These beautiful gifts were dear to their friends.
 	\end{enumerate}
 	\item \begin{enumerate}[1)]
 		\item Regunt, regēbant, regent.
 		\item Dūcit, dūcēbat, dūcet.
-		\item Ēmī, ēmimus, ēmērunt.
+		\item Ēmī, emēbāmus, emēbant.
 		\item Mittō, mittam, mīsī.
 		\item Mittis, mittēs, mīsistis.
 		\item Mittere, emere, dūcere.
-		\item Olim Rōmānī terrās multās habuērunt.
+		\item Ōlim Rōmānī terrās multās habuērunt.
 		\item Saepe nōn eōs bene regēbant.
 		\item Tum incolae eārum terrārum cum audāciā pūgnāvērunt.
-		\item Quod arma habuērunt?
-		\item Ēius arma fuit hastae longae.
-		\item Eōs mīsērunt; eīs Rōmānōs vulnerāvērunt.
+		\item Quae arma habuērunt?
+		\item Eōrum arma fuit hastae longae.
+		\item Eōs mīsērunt; eīs Rōmānōs volnerāvērunt.
 	\end{enumerate}
 \end{enumerate}
 
