fix names and update translations

--- a/tex-translations/20-lesson.tex
+++ b/tex-translations/20-lesson.tex
@@ -18,9 +18,9 @@
 
 \section{\textsc{Review}}
 \begin{enumerate}[1.]
-	\item The following infinitives are \textbf{amō}, amāre; \textbf{moneō}, monēre; \textbf{regō}, regere.
+	\item The following infinitives are: \textbf{amō}, amāre; \textbf{moneō}, monēre; \textbf{regō}, regere.
 	\item The letter before the \textbf{re} of the infinitive needs to be especially noticed.
-	\item  The perfect stems are \textbf{amō}, amāv-; \textbf{moneō}, monu-; \textbf{emō}, em-; \textbf{mittō}, mitt-.
+	\item The perfect stems are \textbf{amō}, amāv-; \textbf{moneō}, monu-; \textbf{emō}, ēm-; \textbf{mittō}, mīs-.
 	\item The personal endings of the perfect are \textbf{-ī}, \textbf{-istī}, \textbf{-it}, \textbf{-imus}, \textbf{-istis}, \textbf{-ērunt, -ēre}.
 	\item The personal endings of the perfect added to \textbf{amō}, \textit{love}.
 	\begin{center}
@@ -81,9 +81,9 @@
 \begin{enumerate}[I.]
 	\setlength{\itemsep}{1em}
 	\item \begin{enumerate}[1)]
-		\item Tired stranger.
+		\item The tired stranger.
 		\item On the full moon.
-		\item With zeal.
+		\item With zeal (zealously).
 		\item Joyfully of this sick boy.
 		\item Whose golden sword?
 		\item Which temple of the gods?
@@ -97,7 +97,7 @@
 	\end{enumerate}
 	\item \begin{enumerate}[1)]
 		\item Advenās bene rēxistī.
-		\item Quis virōs aegrōs in templa mittis?
+		\item Quī virōs aegrōs in templa mittunt?
 		\item Amīcōs nostrōs in oppida dūcēmus.
 		\item Arma māgnā cum cūrā emet.
 		\item Cūius cum aurō arma emit?
@@ -108,13 +108,13 @@
 
 \section{\textsc{Icarus}}
 \textsc{\textbf{Brother and Little Sister}} \\ \\
-\textsc{\textit{F}}. Today my friend told a good story. \\
+\textsc{\textit{B}}. Today my friend told a good story. \\
 \textsc{\textit{S}}. About what has your friend told to you? \\
-\textsc{\textit{F}}. About Icarus, the son of Daedalus, the most unlucky boy. \\
-\textsc{\textit{S}}. Where was Icarus living? In Britannia? \\
-\textsc{\textit{F}}. Not at all; in Creta, the large and beautiful island. Daedalus fashioned wings for Icarus and fitted them with wax for him. The wings were greatly pleasing to Icarus. Then Daedalus taught the boy to fly, but Icarus flew too high. The sun melted the wax and the wings fell off. \\
+\textsc{\textit{B}}. About Icarus, the son of Daedalus, the most unlucky boy. \\
+\textsc{\textit{S}}. Where was Icarus living? In Britain? \\
+\textsc{\textit{B}}. Not at all; in Crete, the large and beautiful island. Daedalus fashioned wings for Icarus and fitted them with wax for him. The wings were greatly pleasing to Icarus. Then Daedalus taught the boy to fly, but Icarus flew too high. The sun melted the wax and the wings fell off. \\
 \textsc{\textit{S}}. But what about Icarus? \\
-\textsc{\textit{F}}. Icarus also fell in the sea. \\
+\textsc{\textit{B}}. Icarus also fell in the sea. \\
 \textsc{\textit{S}}. Alas, the most unlucky Icarus!
 
 \end{document}
