--- a/tex-translations/20-lesson.tex
+++ b/tex-translations/20-lesson.tex
@@ -18,7 +18,7 @@
 
 \section{\textsc{Review}}
 \begin{enumerate}[1.]
-	\item The following infinitives are: \textbf{amō}, amāre; \textbf{moneō}, monēre; \textbf{regō}, regere.
+	\item The following infinitives are \textbf{amō}, amāre; \textbf{moneō}, monēre; \textbf{regō}, regere.
 	\item The letter before the \textbf{re} of the infinitive needs to be especially noticed.
 	\item The perfect stems are \textbf{amō}, amāv-; \textbf{moneō}, monu-; \textbf{emō}, ēm-; \textbf{mittō}, mīs-.
 	\item The personal endings of the perfect are \textbf{-ī}, \textbf{-istī}, \textbf{-it}, \textbf{-imus}, \textbf{-istis}, \textbf{-ērunt, -ēre}.
@@ -112,7 +112,7 @@
 \textsc{\textit{S}}. About what has your friend told to you? \\
 \textsc{\textit{B}}. About Icarus, the son of Daedalus, the most unlucky boy. \\
 \textsc{\textit{S}}. Where was Icarus living? In Britain? \\
-\textsc{\textit{B}}. Not at all; in Crete, the large and beautiful island. Daedalus fashioned wings for Icarus and fitted them with wax for him. The wings were greatly pleasing to Icarus. Then Daedalus taught the boy to fly, but Icarus flew too high. The sun melted the wax and the wings fell off. \\
+\textsc{\textit{B}}. Not at all; in Crete, the large and beautiful island. Daedalus fashioned wings for Icarus and they were fitted with wax. The wings were greatly pleasing to Icarus. Then Daedalus taught the boy to fly, but Icarus flew too high. The sun melted the wax and the wings fell off. \\
 \textsc{\textit{S}}. But what about Icarus? \\
 \textsc{\textit{B}}. Icarus also fell in the sea. \\
 \textsc{\textit{S}}. Alas, the most unlucky Icarus!
